--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,19 +1,62 @@
-#questionario>p{
+*{
+    padding: 0px;
+    border: 0px;
+    margin: 0px;
+}
+h1{
+    text-align: center;
+    margin: 15px;
+}
+body{
+    width: 96%;
+    margin: auto;
+    max-width: 900px;
+    font-weight: bold;
+}
+#cabecalho-questionario{
     background-color: aqua;
-    height: 100px;
+    height: 150px;
     border-radius: 10px;
-    padding-top: 50px;
+    padding: 30px 0px 0px 15px;
+    margin: 15px auto;
+    box-shadow: 2px 2px 2px black;
+    font-weight: bold;
+}
+#cabecalho-questionario>p>input, select{
+    width: 300px;
+    height: 25px;
+
+}
+
+
+#questionario>p {
+    background-color: aqua;
+    height: 70px;
+    border-radius: 10px;
+    padding: 30px 0px 0px 15px;
     margin: 15px auto;
     box-shadow: 2px 2px 2px black;
 
 }
 #questionario>p>label{
     display: inline-block;
-    width: 100px;
+    width: 200px;
+    font-weight: bold;
 
 }
 
 #questionario>p>select{
     text-align: center;
-    width: 50px;
+    width: 70px;
+    height: 25px;
+    font-size: 22px;
+}
+
+.botao{
+    width: 40%;
+    height: 40px;
+    margin: 6px 4%;
+    background-color: blue;
+    color: white;
+    font-weight: bold;
 }
