--- a/css/estilo.css
+++ b/css/estilo.css
@@ -10,7 +10,7 @@ h1{
 body{
     width: 96%;
     margin: auto;
-    max-width: 900px;
+    max-width: 400px;
     font-weight: bold;
 }
 #cabecalho-questionario{
@@ -59,4 +59,6 @@ body{
     background-color: blue;
     color: white;
     font-weight: bold;
+    border-radius: 4px;
+    max-width: 140px;
 }
