--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,28 +3,32 @@
     border: 0px;
     margin: 0px;
 }
-h1{
-    text-align: center;
-    margin: 15px;
-}
+
 body{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     width: 96%;
     margin: auto;
     max-width: 400px;
     font-weight: bold;
 }
+h1{
+    text-align: center;
+    margin: 15px;
+}
+
 #cabecalho-questionario{
     background-color: aqua;
-    height: 150px;
+    height: 200px;
     border-radius: 10px;
-    padding: 30px 0px 0px 15px;
+    padding: 5px 0px 0px 15px;
     margin: 15px auto;
     box-shadow: 2px 2px 2px black;
     font-weight: bold;
 }
 #cabecalho-questionario>p>input, select{
-    width: 300px;
+    width: 96%;
     height: 25px;
+    margin: 10px 0px;
 
 }
 
@@ -33,7 +37,7 @@ body{
     background-color: aqua;
     height: 70px;
     border-radius: 10px;
-    padding: 30px 0px 0px 15px;
+    padding: 20px 0px 0px 15px;
     margin: 15px auto;
     box-shadow: 2px 2px 2px black;
 
@@ -61,4 +65,21 @@ body{
     font-weight: bold;
     border-radius: 4px;
     max-width: 140px;
+}
+
+@media screen and (min-width: 830px) {
+    body{
+        background-color: lightgray;
+        max-width: 900px;
+
+    }
+    #questionario{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+    }
+    #cabecalho-questionario>p>input, select{
+        max-width: 500px;
+    }
+    
 }
